--- a/src/Services/Event/Event.Api/appsettings.json
+++ b/src/Services/Event/Event.Api/appsettings.json
@@ -59,5 +59,32 @@
       "validateLifetime": true
     }
   },
+  "fabio": {
+    "enabled": true,
+    "url": "http://localhost:9999"
+  },
+  "httpClient": {
+    "name": "",
+    "type": "",
+    "resiliency": {
+      "retries": 3,
+      "retryInterval": "00.00:00:03",
+      "exponential": false
+    },
+    "services": {}
+  },
+  "consul": {
+    "enabled": true,
+    "url": "http://localhost:8500",
+    "service": {
+      "name": "event-service",
+      "url": "http://host.docker.internal:2000"
+    },
+    "healthCheck": {
+      "endpoint": "ping",
+      "interval": "00.00:00:05",
+      "deregisterInterval": "00.00:00:05"
+    }
+  },
   "AllowedHosts": "*"
 }
