--- a/src/Shared/Shared.Web/Shared.Web.csproj
+++ b/src/Shared/Shared.Web/Shared.Web.csproj
@@ -16,14 +16,17 @@
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
-        <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.8" />
-        <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.8" />
+      <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
+      <PackageReference Include="Consul" Version="1.6.10.7" />
+      <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="7.0.0" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Shared.Common\Shared.Common.csproj" />
       <ProjectReference Include="..\Shared.Cqrs\Shared.Cqrs.csproj" />
       <ProjectReference Include="..\Shared.Types\Shared.Types.csproj" />
+      
     </ItemGroup>
 
 </Project>
