FIxed fabio with Grpc

--- a/src/Services/Event/Event.Grpc/appsettings.json
+++ b/src/Services/Event/Event.Grpc/appsettings.json
@@ -66,12 +66,12 @@
     "url": "http://localhost:8500",
     "service": {
       "name": "event-grpc-service",
-      "url": "http://host.docker.internal:4081"
+      "url": "host.docker.internal:4081"
     },
     "healthCheck": {
-      "endpoint": "ping",
-      "interval": "00.00:00:05",
-      "deregisterInterval": "00.00:00:05"
+      "endpoint": "",
+      "interval": "00.00:00:10",
+      "deregisterInterval": "00.00:00:10"
     }
   },
   "AllowedHosts": "*"
