--- a/src/Services/Event/Event.Grpc/Event.Grpc.csproj
+++ b/src/Services/Event/Event.Grpc/Event.Grpc.csproj
@@ -11,22 +11,23 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Protobuf Include="Protos\event.proto" GrpcServices="Server"/>
+        <Protobuf Include="Protos\event.proto" GrpcServices="Server" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Grpc.AspNetCore" Version="2.49.0"/>
-        <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0"/>
-        <PackageReference Include="Polly.Extensions.Http" Version="3.0.0"/>
+        <PackageReference Include="Grpc.AspNetCore" Version="2.49.0" />
+        <PackageReference Include="Grpc.AspNetCore.HealthChecks" Version="2.51.0" />
+        <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
+        <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\Shared\Shared.Grpc\Shared.Grpc.csproj"/>
-        <ProjectReference Include="..\..\..\Shared\Shared.Logging\Shared.Logging.csproj"/>
-        <ProjectReference Include="..\..\..\Shared\Shared.Metrics\Shared.Metrics.csproj"/>
-        <ProjectReference Include="..\..\..\Shared\Shared.Prometheus\Shared.Prometheus.csproj"/>
-        <ProjectReference Include="..\..\..\Shared\Shared.Web\Shared.Web.csproj"/>
-        <ProjectReference Include="..\Event.Application\Event.Application.csproj"/>
+        <ProjectReference Include="..\..\..\Shared\Shared.Grpc\Shared.Grpc.csproj" />
+        <ProjectReference Include="..\..\..\Shared\Shared.Logging\Shared.Logging.csproj" />
+        <ProjectReference Include="..\..\..\Shared\Shared.Metrics\Shared.Metrics.csproj" />
+        <ProjectReference Include="..\..\..\Shared\Shared.Prometheus\Shared.Prometheus.csproj" />
+        <ProjectReference Include="..\..\..\Shared\Shared.Web\Shared.Web.csproj" />
+        <ProjectReference Include="..\Event.Application\Event.Application.csproj" />
     </ItemGroup>
 
 </Project>
