--- a/src/Services/Slip/Slip.Service/appsettings.json
+++ b/src/Services/Slip/Slip.Service/appsettings.json
@@ -87,7 +87,7 @@
     "spanContextHeader": "span_context"
   },
   "urls": {
-    "EventGrpcUrl": "http://localhost:4081"
+    "EventGrpcUrl": "http://fabio:9999/event-grpc-service"
   },
   "AllowedHosts": "*"
 }
