--- a/src/Services/Identity/Identity.Api/appsettings.docker.json
+++ b/src/Services/Identity/Identity.Api/appsettings.docker.json
@@ -22,5 +22,33 @@
   },
   "postgres": {
     "connectionString": "Host=postgres,5432;Database=odin-users;Username=postgres;Password=postgres"
+  },
+  "fabio": {
+    "enabled": true,
+    "url": "http://localhost:9999"
+  },
+  "httpClient": {
+    "name": "",
+    "type": "",
+    "resiliency": {
+      "retries": 3,
+      "retryInterval": "00.00:00:03",
+      "exponential": false
+    },
+    "services": {}
+  },
+  "consul": {
+    "enabled": true,
+    "isGrpc": false,
+    "url": "http://consul:8500",
+    "service": {
+      "name": "identity-service",
+      "url": "http://identity.api"
+    },
+    "healthCheck": {
+      "endpoint": "ping",
+      "interval": "00.00:00:05",
+      "deregisterInterval": "00.00:00:05"
+    }
   }
 }
