--- a/src/Services/Slip/Slip.Api/appsettings.docker.json
+++ b/src/Services/Slip/Slip.Api/appsettings.docker.json
@@ -111,5 +111,33 @@
   "urls": {
     "EventGrpcUrl": "http://event.grpc:81"
   },
+  "fabio": {
+    "enabled": true,
+    "url": "http://localhost:9999"
+  },
+  "httpClient": {
+    "name": "",
+    "type": "",
+    "resiliency": {
+      "retries": 3,
+      "retryInterval": "00.00:00:03",
+      "exponential": false
+    },
+    "services": {}
+  },
+  "consul": {
+    "enabled": true,
+    "isGrpc": false,
+    "url": "http://consul:8500",
+    "service": {
+      "name": "slip-service",
+      "url": "http://slip.api"
+    },
+    "healthCheck": {
+      "endpoint": "ping",
+      "interval": "00.00:00:05",
+      "deregisterInterval": "00.00:00:05"
+    }
+  },
   "AllowedHosts": "*"
 }
