--- a/src/Services/Slip/Slip.Service/appsettings.docker.json
+++ b/src/Services/Slip/Slip.Service/appsettings.docker.json
@@ -87,7 +87,7 @@
     "spanContextHeader": "span_context"
   },
   "urls": {
-    "EventGrpcUrl": "http://event.grpc:81"
+    "EventGrpcUrl": "http://fabio/event-grpc-service"
   },
   "AllowedHosts": "*"
 }
