Deleting slip from redis when bet placement is successful

--- a/src/Services/Slip/Slip.Service/appsettings.docker.json
+++ b/src/Services/Slip/Slip.Service/appsettings.docker.json
@@ -83,6 +83,9 @@
         },
         "spanContextHeader": "span_context"
     },
+    "redis": {
+        "ConnectionString": "redis:6379"
+    },
     "urls": {
         "EventGrpcUrl": "http://event.grpc:81"
     },
