--- a/src/Services/Slip/Slip.Service/Slip.Service.csproj
+++ b/src/Services/Slip/Slip.Service/Slip.Service.csproj
@@ -42,5 +42,6 @@
       <ProjectReference Include="..\..\..\Shared\Shared.Logging\Shared.Logging.csproj" />
       <ProjectReference Include="..\..\..\Shared\Shared.MessageBroker.Cqrs\Shared.MessageBroker.Cqrs.csproj" />
       <ProjectReference Include="..\..\..\Shared\Shared.RabbitMq\Shared.RabbitMq.csproj" />
+      <ProjectReference Include="..\Slip.Infrastructure\Slip.Infrastructure.csproj" />
     </ItemGroup>
 </Project>
