--- a/src/Services/Slip/Slip.Service/appsettings.json
+++ b/src/Services/Slip/Slip.Service/appsettings.json
@@ -86,5 +86,8 @@
   "urls": {
     "EventGrpcUrl": "http://localhost:4081"
   },
+  "redis": {
+    "ConnectionString": "localhost:6379"
+  },
   "AllowedHosts": "*"
 }
